# multi_projs_cmake_ex

./: CMakeLists.txt  README.md
proj1/src/: CMakeLists.txt  add.c  main.c
proj2/: CMakeLists.txt
proj2/src/: CMakeLists.txt
